--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -31,7 +31,7 @@ $tweet-dark:    #111111;
 $tweet-dark-hover:  lighten($tweet-dark, 5%);
 
 // Column headers
-$header-height: 54px; //Any heights above 50px may make the column drag handle look strange. Any such changes are at your own risk.
+// Warning: This variable is _very_ powerful. Any heights below 30px may be too cramped, and any heights above 50px may cause the drag handle to go weird. These changes are at your own risk.
 
 // Compose fixes
 $compose-fix:   10px;
